# axum-diesel-tera-jwt-auth

./: .gitignore  Cargo.toml  README.md
csv/: export.csv  import.csv
migrations/2023-12-28-062228_create_users/: up.sql
migrations/2023-12-28-062853_create_posts/: up.sql
migrations/2023-12-28-063241_create_sessions/: down.sql
migrations/2024-02-05-122726_create_users/: up.sql
migrations/2024-02-05-122906_create_posts/: up.sql
migrations/2024-02-05-123109_create_sessions/: up.sql
src/: common.rs  lib.rs  main.rs  models.rs  routes_account.rs  schema.rs
src/auth/: handlers.rs  models.rs  repository.rs  views.rs
src/import_export/: handlers.rs  models.rs  views.rs
src/photo/: handlers.rs  models.rs
src/profile/: accreditation.rs  handlers.rs  models.rs
src/util/: date_config.rs
templates/: base.html  delete.html  export_csv.html  index.html  login.html  password_change.html  photo.html  signup.html  update.html  user.html  users.html
