[package]
name = "axum-diesel"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
axum = { version = "0.7", features = ["multipart"] }
cookie = "0.18"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
rand_chacha = "0.3"
tera = "1.19"
diesel = { version = "2", features = ["postgres", "chrono"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
bb8 = "0.8"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }
chrono = "0.4"
bcrypt = "0.15"
jsonwebtoken = "9.2"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
csv = "1.3"
axum-macros = "0.4"
futures-util = "0.3"